kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boostagram-consumer
  labels:
    app: boostagram-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boostagram-consumer
  template:
    metadata:
      labels:
        app: boostagram-consumer
    spec:
      containers:
        - name: boostagram-consumer
          image: localhost:32000/boostagram-consumer:latest
          ports:
            - containerPort: 5000
        - name: nginx
          image: nginx:stable-alpine
          volumeMounts:
            - mountPath: /etc/nginx
              name: boostagram-consumer-nginx-conf
      volumes:
        - name: boostagram-consumer-nginx-conf
          configMap:
            defaultMode: 444
            name: boostagram-consumer-nginx-conf

---
apiVersion: v1
kind: Service
metadata:
  name: boostagram-consumer
  labels:
    app: boostagram-consumer
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: boostagram-consumer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boostagram-consumer
  labels:
    app: boostagram-consumer
spec:
  tls:
  - hosts:
      - boostagrams.beanteam.org
    secretName: beanteam-tls
  rules:
  - host: boostagrams.beanteam.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: boostagram-consumer
            port:
              number: 80
